--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.0",
     "nanoid": "^5.0.7",
+    "nodemon": "^3.1.10",
     "short-unique-id": "^5.2.0",
     "shortid": "^2.2.16",
     "uuid": "^10.0.0"
